<resources>
    <string name="app_name">AdsTest</string>

    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string> // Sample App Id

    <string name="adb_unit_id">ca-app-pub-3940256099942544/6300978111</string> // Sample Ad Unit Id For AdMob Banner Ads
    <string name="adi_unit_id">ca-app-pub-3940256099942544/1033173712</string> // Sample Ad Unit Id For AdMob Interstitial Ads
    <string name="adr_unit_id">ca-app-pub-3940256099942544/5224354917</string> // Sample Ad Unit Id For AdMob Rewarding Ads
    <string name="adn_unit_id">ca-app-pub-3940256099942544/2247696110</string> // Sample Ad Unit Id For AdMob Native Ads

    <string name="adbm_unit_id">/6499/example/banner</string> // Sample Ad Unit Id for Ad Manager Banner Ads
    <string name="adim_unit_id">/6499/example/interstitial</string> // Sample Ad Unit Id for Ad Manager Banner Ads
    <string name="adrm_unit_id">/6499/example/rewarded</string> // Sample Ad Unit Id for Ad Manager Rewarding Ads
    <string name="adnm_unit_id">/6499/example/native</string> // Sample Ad Unit Id for Ad Manager Native Ads


    <string name="banner_ads_example">Banner Ads Example</string>
    <string name="interstitial_ads_example">Interstitial Ads Example</string>
    <string name="native_ads_example">Native Ads Example</string>
    <string name="rewarded_ads_example">Rewarded Ads Example</string>

    <string name="m_banner_ads_example">Banner Ads Example</string>
    <string name="m_interstitial_ads_example">Interstitial Ads Example</string>
    <string name="m_native_ads_example">Native Ads Example</string>
    <string name="m_rewarded_ads_example">Rewarded Ads Example</string>

    <string name="admob_ads_integration_examples">AdMob Ads Integration Examples</string>
    <string name="ad_manger_ads_integration_examples">AdManager Ads Integration Examples</string>

    <string name="app_content">App Content</string>
    <string name="load_next_ad">Load Next Ad</string>
    <string name="load_ad">Load Ad</string>
    <string name="show_ad">Show Ad</string>
</resources>